--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -61,9 +61,6 @@
 \newcommand{\DAEYAHSP}{{\sc DaE$_{\text{YAHSP}}$}}
 \newcommand{\YAHSP}{{\sc YAHSP}}
 
-\def\UU{{\mathbb{U}}}
-
-
 \begin{document}
 
 %\title{A Multicore Implementation of the Divide-and-Evolve Algorithm}
@@ -101,11 +98,13 @@ Vincent Vidal\\
 
 \maketitle
 \begin{abstract}
-This paper provides 
+After having instantiated the evolutionary metaheuristic \DAEX\ with the forward search \YAHSP\ planner, 
+we investigate on the global parallelism approach, which exploit the inherent parallelism of the individual evaluation.
+This paper describes a parallel shared-memory release of the \DAEYAHSP\ planning system using the OpenMP directive-based API.
+The parallelization scheme applies at a high level abstraction and thus can be used by any evolutionary algorithm implemented with the Evolving Objects framework.
+The proof of concept is made on a 48-core machine with two planning tasks extracted from the last international planning competition.
+Experiments show significant speedups along the number of cores and along the size of the population.
 
-contribution: work on EO level of abstraction ... (reusable by other)
-
-proof of concept with DAE.
 
 \end{abstract}
 
